--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,37 @@ android {
         }
     }
 }
-
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile'com.ashokvarma.android:bottom-navigation-bar:1.2.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.3.1'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
+
+    implementation 'com.blankj:utilcode:1.3.4'
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+    implementation 'com.trello:rxlifecycle-components:1.0'
+    implementation   'org.greenrobot:greendao:3.2.0'
+    implementation 'com.github.ikidou:FragmentBackHandler:2.1'
+
+
 }
